hard-gists/667919/run.log
=== Docker Run Log for 667919 ===
Started at: Mi 29. Okt 16:41:14 CET 2025

[2025-10-29 16:41:15] START: Running container for 667919
[2025-10-29 16:41:15] SUCCESS: Container 45276c8e344afc2d93001380d27aa7693498e0f8b16ff358c52b967f3ddc3e07 started for 667919
=== Container logs for 667919 ===
  File "/snippet.py", line 22
    print '_finish_err: %s' % failure
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 667919 ===
[2025-10-29 16:41:17] INFO: Container 45276c8e344afc2d93001380d27aa7693498e0f8b16ff358c52b967f3ddc3e07 has stopped
